# gateway-shared

./: Cargo.toml
.github/workflows/: ci.yml
crates/gateway-common/: Cargo.toml
crates/gateway-common/src/: config.rs  db.rs  error.rs  lib.rs  redis.rs  tokens.rs  types.rs
crates/gateway-hypercore/: Cargo.toml
crates/gateway-hypercore/src/: client.rs  events.rs  inline.rs  lib.rs  types.rs  ws.rs
crates/gateway-payments/: Cargo.toml
crates/gateway-payments/src/: accounts.rs  credits.rs  deposits.rs  evm_watcher.rs  keys.rs  lib.rs  replay.rs
crates/gateway-x402/: Cargo.toml
crates/gateway-x402/src/: envelope.rs  estimator.rs  lib.rs  settle.rs  types.rs  verify.rs
migrations/: 001_initial_schema.sql  002_used_payments.sql
