[workspace]
members = [
    "crates/gateway-common",
    "crates/gateway-payments",
    "crates/gateway-x402",
    "crates/gateway-hypercore",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.138"
reqwest = { version = "0.12", features = ["json", "stream"] }
alloy = { version = "0.12", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "time", "bigdecimal"] }
redis = { version = "0.27", features = ["aio", "tokio-comp", "connection-manager"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
sha2 = "0.10"
rand = "0.9"
base64 = "0.22"
tiktoken-rs = "0.6"
config = "0.14"
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["db-postgres"] }
time = { version = "0.3", features = ["serde"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
hex = "0.4"
async-stream = "0.3"
