[package]
name = "gateway-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
swype = []

[dependencies]
alloy.workspace = true
config.workspace = true
redis.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true
