[package]
name = "gateway-common"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = []
swype = []

[dependencies]
alloy.workspace = true
config.workspace = true
redis.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true
