[package]
name = "gateway-hypercore"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gateway-common = { path = "../gateway-common" }
alloy.workspace = true
anyhow.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
rust_decimal.workspace = true
futures.workspace = true
