[package]
name = "gateway-payments"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gateway-common = { path = "../gateway-common" }
gateway-hypercore = { path = "../gateway-hypercore" }
anyhow.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true
alloy.workspace = true
async-trait.workspace = true
time.workspace = true
redis.workspace = true
