[package]
name = "gateway-x402"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
gateway-common = { path = "../gateway-common" }
alloy.workspace = true
anyhow.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
rust_decimal.workspace = true
hex.workspace = true
# R-5: envelope HMAC verification (signed gateway responses).
hmac = "0.12"
sha2 = "0.10"
thiserror = "2"
